--- a/SyteIfns/package.json
+++ b/SyteIfns/package.json
@@ -83,6 +83,7 @@
     "mini-css-extract-plugin": "0.4.2",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "css-loader": "1.0.0",
+    "css-to-string-loader": "0.1.3",
     "style-loader": "0.23.0",
     "@ngtools/webpack": "^1.6.1",
     "@types/jasmine": "^2.5.53",
@@ -93,7 +94,7 @@
     "concurrently": "^3.5.0",
     "copy-webpack-plugin": "^4.0.1",
     "extract-text-webpack-plugin": "4.0.0-alpha.0",
-    "file-loader": "^0.11.2",
+    "file-loader": "2.0.0",
     "html-loader": "^0.5.1",
     "html-webpack-plugin": "^2.30.1",
     "http-server": "^0.10.0",
