--- a/SyteIfns/tsconfig.json
+++ b/SyteIfns/tsconfig.json
@@ -10,8 +10,9 @@
 
     "noImplicitAny": true,
     "suppressImplicitAnyIndexErrors": true,
+    "types": ["node"],
     "typeRoots": [
-      "node_modules/@types/"
+      "../node_modules/@types/"
     ]
   },
   "exclude": [
