--- a/SyteIfns/package.json
+++ b/SyteIfns/package.json
@@ -23,6 +23,7 @@
     "html-webpack-plugin": "2.26.0",
     "webpack-merge": "4.1.4",
     "web-animations-js": "2.3.1",
+    "webpack": "4.27.1", 
     "extract-text-webpack-plugin": "4.0.0-alpha.0",
     "hammerjs": "2.0.8",
     "core-js": "^2.5.5",
@@ -77,7 +78,7 @@
     "@types/node": "^10.0.4",
     "typescript": "^2.8.3",
     "webpack": "4.18.0",
-    "webpack-cli": "^2.1.2",
+    "webpack-cli": "3.1.2",
     "webpack-dev-server": "^3.1.4",
     "uglifyjs-webpack-plugin": "^1.2.5",
     "mini-css-extract-plugin": "0.4.2",
