--- a/SyteIfns/tsconfig.json
+++ b/SyteIfns/tsconfig.json
@@ -7,10 +7,9 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "lib": [ "es2015", "dom" ],
-
-    "noImplicitAny": true,
+    "noImplicitAny": false,
     "suppressImplicitAnyIndexErrors": true,
-    "types": ["node"],
+    "types": [ "node" ],
     "typeRoots": [
       "../node_modules/@types/"
     ]
