--- a/SyteIfns/package.json
+++ b/SyteIfns/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "helloapp",
+  "name": "ifns",
   "version": "1.0.0",
   "description": "First Angular 5 Project",
   "author": "Eugene Popov <metanit.com>",
@@ -8,120 +8,46 @@
     "build": "webpack --mode production"
   },
   "dependencies": {
+    "webpack-cli": "3.3.0",
+    "webpack": "4.29.6",
     "@angular/platform-server": "6.1.7",
+    "@angular/animations": "6.1.7",
     "@angular/common": "~6.1.7",
-    "@angular/cdk": "~6.4.7",
-    "@angular/http:": "6.1.7",
     "@angular/compiler": "~6.1.7",
+    "@angular/cdk": "~6.4.7",
     "@angular/core": "~6.1.7",
     "@angular/forms": "~6.1.7",
-    "@angular/platform-browser": "~6.1.7",
-    "@angular/platform-browser-dynamic": "~6.1.7",
     "@angular/router": "~6.1.7",
     "@angular/material": "6.4.7",
-    "@angular/animations": "6.1.7",
-    "html-webpack-plugin": "2.26.0",
-    "webpack-merge": "4.1.4",
-    "web-animations-js": "2.3.1",
-    "webpack": "4.27.1", 
-    "extract-text-webpack-plugin": "4.0.0-alpha.0",
-    "hammerjs": "2.0.8",
-    "core-js": "^2.5.5",
-    "rxjs-compat": "6.3.2",
-    "rxjs": "6.3.2",
-    "zone.js": "^0.8.26",
-    "html-loader": "0.5.5",
-    "xml2js": "0.4.19",
-    "class-transformer": "0.1.9",
-    "bootstrap": "4.1.3",
-    "es6-shim": "0.35.3",
-    "es6-promise": "4.2.5",
-    "event-source-polyfill": "0.0.16",
-    "jquery": "3.3.1",
-    "awesome-typescript-loader": "5.2.1",
-    "chalk": "2.4.1",
-    "angular2-template-loader": "0.6.2",
-    "@nguniversal/aspnetcore-engine": "6.1.0",
-    "@angular/material-moment-adapter": "6.4.7"
-  },
-  "devDependencies": {
-    "@types/chai": "4.1.4",
-    "chai": "4.1.2",
-    "jasmine-core": "3.2.1",
-    "karma": "3.0.0",
-    "karma-chai": "0.1.0",
-    "karma-chrome-launcher": "2.2.0",
-    "karma-cli": "1.0.1",
-    "karma-jasmine": "1.1.2",
-    "karma-webpack": "3.0.4",
-    "@angular/common": "~6.1.7",
-    "@angular/cdk": "~6.4.7",
-    "@angular/compiler": "~6.1.7",
-    "@angular/core": "~6.1.7",
-    "@angular/forms": "~6.1.7",
     "@angular/platform-browser": "~6.1.7",
     "@angular/platform-browser-dynamic": "~6.1.7",
-    "@angular/router": "~6.1.7",
-    "@angular/material": "6.4.7",
-    "@angular/animations": "6.1.7",
-    "webpack-merge": "4.1.4",
-    "web-animations-js": "2.3.1",
-    "hammerjs": "2.0.8",
-    "core-js": "^2.5.5",
-    "rxjs": "6.3.2",
-    "zone.js": "^0.8.26",
-    "xml2js": "0.4.19",
-    "class-transformer": "0.1.9",
-    "awesome-typescript-loader": "5.2.1",
-    "chalk": "2.4.1",
     "angular2-template-loader": "0.6.2",
-    "@types/node": "^10.0.4",
-    "typescript": "^3.3",
-    "webpack": "4.18.0",
-    "webpack-cli": "3.1.2",
-    "webpack-dev-server": "^3.1.4",
-    "uglifyjs-webpack-plugin": "^1.2.5",
-    "mini-css-extract-plugin": "0.4.2",
-    "optimize-css-assets-webpack-plugin": "5.0.1",
-    "css-loader": "1.0.0",
-    "css-to-string-loader": "0.1.3",
-    "style-loader": "0.23.0",
-    "@ngtools/webpack": "^1.6.1",
-    "@types/jasmine": "^2.5.53",
-    "angular-router-loader": "^0.6.0",
-    "canonical-path": "0.0.2",
-    "clean-webpack-plugin": "0.1.19",
-    "codelyzer": "^3.1.2",
-    "concurrently": "^3.5.0",
-    "copy-webpack-plugin": "^4.0.1",
-    "extract-text-webpack-plugin": "4.0.0-alpha.0",
-    "file-loader": "2.0.0",
-    "html-loader": "^0.5.1",
-    "html-webpack-plugin": "^2.30.1",
-    "http-server": "^0.10.0",
-    "json-loader": "^0.5.7",
-    "lite-server": "^2.3.0",
-    "lodash": "^4.17.4",
-    "node-sass": "^4.5.3",
-    "protractor": "~5.1.2",
-    "raw-loader": "^0.5.1",
-    "rimraf": "^2.6.1",
-    "sass-loader": "^6.0.6",
-    "source-map-loader": "^0.2.1",
-    "ts-helpers": "^1.1.2",
-    "tslint": "^5.6.0",
-    "tslint-loader": "^3.5.3",
-    "url-loader": "^0.5.9",
-    "bootstrap": "4.1.3",
-    "postcss-loader": "3.0.0",
-    "es6-shim": "0.35.3",
-    "es6-promise": "4.2.5",
-    "event-source-polyfill": "0.0.16",
-    "jquery": "3.3.1",
+    "web-animations-js": "2.3.1",
+    "bootstrap": "4.0.0-beta",
     "popper.js": "1.14.4",
-    "aspnet-prerendering": "3.0.1",
-    "to-string-loader": "1.1.5",
-    "rxjs-compat": "6.3.2",
-    "user-info": "2.0.0" 
-  }
+    "es6-promise": "4.2.5",
+    "es6-shim": "0.35.3",
+    "event-source-polyfill": "0.0.16",
+    "css-to-string-loader": "0.1.3",
+    "jquery": "3.3.1",
+    "extract-text-webpack-plugin": "4.0.0-alpha.0",
+    "uglifyjs-webpack-plugin": "1.2.5",
+    "awesome-typescript-loader": "5.2.1",
+    "style-loader": "0.23.0",
+    "css-loader": "1.0.0",
+    "rxjs": "6.3.2",
+    "zone.js": "^0.8.26",
+    "hammerjs": "2.0.8",
+    "typescript": "2.8.3",
+    "ng2-signalr": "6.1.0",
+    "class-transformer": "0.1.9",
+    "raw-loader": "^0.5.1",
+    "html-loader": "0.5.5",
+    "file-loader": "2.0.0",
+    "core-js": "^2.5.5",
+    "moment": "2.24.0",
+    "@types/node": "^10.0.4",
+    "signalr": "2.4.0"
+  },
+  "devDependencies": {}
 }
