--- a/AutomatAis3Full/Config/App.config
+++ b/AutomatAis3Full/Config/App.config
@@ -11,6 +11,7 @@
     <add key="FileInn" value="XmlFile/Inn.xml" /><!--Путь к файлу ИНН по схеме SnuOneForm.xsd-->
     <add key="FileFpd" value="XmlFile/Fpd.xml" /><!--Путь к файлу ФПД по схеме FpdReg.xsd-->
     <add key="FileInnFull" value="XmlFile/InnFull.xml" /><!--Путь к файлу массовых ИНН по схеме FullInnCount.xsd-->
+    <add key="IdZaprosVisual" value="XmlFile/IdZaprosVisual.xml"/> <!--Путь к файлу для визуальной идентификации-->
     <add key="FidFace" value="XmlFile/FidFace.xml" /> <!--Файл с фидами для регистрации-->
     <add key="FileJurnalError" value="XmlJurnal/InnError.xml" /><!--Путь к файлу Журналу ошибок по схеме ErrorJurnal.xsd-->
     <add key="FileJurnalOk" value="XmlJurnal/InnOk.xml" /><!--Путь к файлу Журналу отрабтаных по схеме OkJurnal.xsd-->
