--- a/AutomatAis3Full/Config/App.config
+++ b/AutomatAis3Full/Config/App.config
@@ -7,23 +7,26 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
   <appSettings>
-    <add key="ServiceAndIpComputer" value="ServiceTestIfns,i7751-w00000745"/>
-    <add key="ServerReport" value="http://i7751-w00000745:8181/ServiceRest/MigrationError"/><!--Сервер создания отчетов по миграции Письма-->
+    <add key="Ifns" value="7751" /><!--ИФНС для выборок-->
+    <add key="Help" value="Help\AutomateAis3Full.pdf" /><!--Помощь пользователю-->
+    <add key="ServiceAndIpComputer" value="ServiceTestIfns,localhost" />
+    <add key="ServerReport" value="http://localhost:8181/ServiceRest/MigrationError" /><!--Сервер создания отчетов по миграции Письма-->
     <add key="FileFid" value="XmlFile/Fid.xml" /><!--Путь к файлу ФИД по схеме FidZemlyOrImushestvo.xsd-->
     <add key="FileInn" value="XmlFile/Inn.xml" /><!--Путь к файлу ИНН по схеме SnuOneForm.xsd-->
     <add key="FileFpd" value="XmlFile/Fpd.xml" /><!--Путь к файлу ФПД по схеме FpdReg.xsd-->
     <add key="FileInnFull" value="XmlFile/InnFull.xml" /><!--Путь к файлу массовых ИНН по схеме FullInnCount.xsd-->
-    <add key="IdZaprosVisual" value="XmlFile/IdZaprosVisual.xml"/> <!--Путь к файлу для визуальной идентификации-->
+    <add key="IdZaprosVisual" value="XmlFile/IdZaprosVisual.xml" /> <!--Путь к файлу для визуальной идентификации-->
     <add key="FidFace" value="XmlFile/FidFace.xml" /> <!--Файл с фидами для регистрации-->
     <add key="FileJurnalError" value="XmlJurnal/InnError.xml" /><!--Путь к файлу Журналу ошибок по схеме ErrorJurnal.xsd-->
     <add key="FileJurnalOk" value="XmlJurnal/InnOk.xml" /><!--Путь к файлу Журналу отрабтаных по схеме OkJurnal.xsd-->
-    <add key="ReportMigration" value="XmlJurnal/ReportMigration.xml"/><!--Журнал миграции по схеме ReportMigration.xsd-->
+    <add key="ReportMigration" value="XmlJurnal/ReportMigration.xml" /><!--Журнал миграции по схеме ReportMigration.xsd-->
     <add key="FileSpisok" value="FormXml/" /><!--Папка для формирование -->
     <add key="PathJurnal" value="XmlJurnal/" /><!--Путь к журналам-->
     <add key="PathInn" value="XmlFile/" /><!--Путь к спискам значений-->
     <add key="ExcelReportFile" value="ExcelReport/" /><!--Путь к конвертированым отчетам!!!-->
     <add key="PathPdfTemp" value="C:\Windows\Temp\" /><!--Путь к PDF файлам!!!-->
     <add key="PathPdfWork" value="PdfReport/" /><!--Путь к PDF файлам!!!-->
+    <add key="ExeptionsIfns" value="" /><!--ИНН для исключения-->
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
