--- a/AutomatAis3Full/packages.config
+++ b/AutomatAis3Full/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AutoItX.Dotnet" version="3.3.14.5" targetFramework="net452" />
   <package id="ClosedXML" version="0.93.1" targetFramework="net452" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net452" />
   <package id="DocumentFormat.OpenXml" version="2.7.2" targetFramework="net452" />
