Актуальная версия добавлено обработка ЛК

--- a/AutomatAis3Full/AutomatAis3Full.csproj
+++ b/AutomatAis3Full/AutomatAis3Full.csproj
@@ -170,6 +170,14 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Form\Automat\Uregulirovanie\MessageLk\UserControl\MessageLk.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Form\Automat\Uregulirovanie\UtverzdenieSz\UserControl\UtverzdenieSz.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Form\FormirovanieSpiskov\Spiski\FormFormirovanie\FormSpisok.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -268,6 +276,14 @@
     <Compile Include="Form\Automat\Registration\UtochneneeSved\DataContext\DataContextReg.cs" />
     <Compile Include="Form\Automat\Registration\UtochneneeSved\UserControl\YtochnenieSved.xaml.cs">
       <DependentUpon>YtochnenieSved.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Form\Automat\Uregulirovanie\MessageLk\DataContext\DataContextMessageLk.cs" />
+    <Compile Include="Form\Automat\Uregulirovanie\MessageLk\UserControl\MessageLk.xaml.cs">
+      <DependentUpon>MessageLk.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Form\Automat\Uregulirovanie\UtverzdenieSz\DataContext\DataContextUtverzdenieSz.cs" />
+    <Compile Include="Form\Automat\Uregulirovanie\UtverzdenieSz\UserControl\UtverzdenieSz.xaml.cs">
+      <DependentUpon>UtverzdenieSz.xaml</DependentUpon>
     </Compile>
     <Compile Include="Form\FormirovanieSpiskov\Spiski\DataContext\DataContextSpisok.cs" />
     <Compile Include="Form\FormirovanieSpiskov\Spiski\FormFormirovanie\FormSpisok.xaml.cs">
