--- a/Algoritm/Algoritm.csproj
+++ b/Algoritm/Algoritm.csproj
@@ -55,6 +55,7 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="UIAutomationClient" />
     <Reference Include="Vintasoft.Barcode, Version=12.0.5.1, Culture=neutral, PublicKeyToken=153caf29a10d2e31, processorArchitecture=MSIL">
       <HintPath>C:\Nuget\Vintasoft.Barcode.12.0.5.1\lib\net40\Vintasoft.Barcode.dll</HintPath>
       <Private>True</Private>
