--- a/LibaryCommandPublic/LibaryCommandPublic.csproj
+++ b/LibaryCommandPublic/LibaryCommandPublic.csproj
@@ -74,6 +74,8 @@
     <Compile Include="TestAutoit\Reg\TreatmentFPD\Zemly\Zemly.cs" />
     <Compile Include="TestAutoit\Reg\VisualTreatmentFace\VisualTreatmentFace.cs" />
     <Compile Include="TestAutoit\Reg\YtochnenieSved\AutoCommand\YtochnenieSved.cs" />
+    <Compile Include="TestAutoit\Uregulirovanie\MessageLk\AutoMessageLk.cs" />
+    <Compile Include="TestAutoit\Uregulirovanie\UtverzdenieSz\AutoStart.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LibaryAIS3Windows\LibaryAIS3Windows.csproj">
@@ -96,6 +98,7 @@
   <ItemGroup>
     <None Include="app.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
