--- a/ViewModelLib/ViewModelLib.csproj
+++ b/ViewModelLib/ViewModelLib.csproj
@@ -100,6 +100,7 @@
     <Compile Include="ModelTestAutoit\ModelSnuOneAuto\DataXml\XmlUseProperty.cs" />
     <Compile Include="ModelTestAutoit\PublicModel\ButtonStartAutomat\HotKey.cs" />
     <Compile Include="ModelTestAutoit\PublicModel\ButtonStartAutomat\StartOnStopProperty.cs" />
+    <Compile Include="ModelTestAutoit\PublicModel\DataPickerItRule\DataPickerRuleItModel.cs" />
     <Compile Include="ModelTestAutoit\PublicModel\DatePicker\DatePickerPub.cs" />
     <Compile Include="ModelTestAutoit\PublicModel\LableAndErrorModel\LableModel.cs" />
     <Compile Include="ModelTestAutoit\PublicModel\PdfHelp\PdfHelp.cs" />
