Добавили парсин ролей на технологии AutomationElement

--- a/Algoritm/Algoritm.csproj
+++ b/Algoritm/Algoritm.csproj
@@ -113,6 +113,17 @@
     <Content Include="Scripts\Vintasoft\Vintasoft.Barcode.js" />
     <Content Include="Scripts\Vintasoft\Vintasoft.Shared.js" />
   </ItemGroup>
+  <ItemGroup>
+    <COMReference Include="ADODB">
+      <Guid>{00000205-0000-0010-8000-00AA006D2EA4}</Guid>
+      <VersionMajor>2</VersionMajor>
+      <VersionMinor>5</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>primary</WrapperTool>
+      <Isolated>False</Isolated>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </COMReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
