--- a/AutomatAis3Full/Config/App.config
+++ b/AutomatAis3Full/Config/App.config
@@ -20,6 +20,7 @@
     <add key="FileJurnalError" value="XmlJurnal/InnError.xml" /><!--Путь к файлу Журналу ошибок по схеме ErrorJurnal.xsd-->
     <add key="FileJurnalOk" value="XmlJurnal/InnOk.xml" /><!--Путь к файлу Журналу отрабтаных по схеме OkJurnal.xsd-->
     <add key="ReportMigration" value="XmlJurnal/ReportMigration.xml" /><!--Журнал миграции по схеме ReportMigration.xsd-->
+    <add key="UserRule" value="XmlJurnal/UserRule.xml" /><!--Журнал миграции по схеме UserRule.xsd-->
     <add key="FileSpisok" value="FormXml/" /><!--Папка для формирование -->
     <add key="PathJurnal" value="XmlJurnal/" /><!--Путь к журналам-->
     <add key="PathInn" value="XmlFile/" /><!--Путь к спискам значений-->
